<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>52</version>
  </parent>

  <groupId>org.sonarsource.typescript</groupId>
  <artifactId>typescript</artifactId>
  <version>2.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>SonarTS</name>
  <description>SonarQube TypeScript Analyzer</description>
  <url>http://redirect.sonarsource.com/plugins/typescript.html</url>
  <inceptionYear>2017</inceptionYear>
  <organization>
    <name>SonarSource</name>
    <url>http://www.sonarsource.com</url>
  </organization>
  <licenses>
    <license>
      <name>GNU LGPL 3</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>vilchik-elena</id>
      <name>Elena Vilchik</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>stas-vilchik</id>
      <name>Stas Vilchik</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>saberduck</id>
      <name>Tibor Blenessy</name>
      <organization>SonarSource</organization>
    </developer>
  </developers>

  <modules>
    <module>sonar-typescript-plugin</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/SonarTS.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/SonarTS.git</developerConnection>
    <url>https://github.com/SonarSource/SonarTS</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/SonarSource/SonarTS/issues</url>
  </issueManagement>
  <ciManagement>
    <system>Travis</system>
    <url>https://travis-ci.org/SonarSource/SonarTS</url>
  </ciManagement>

  <properties>
    <gitRepositoryName>SonarTS</gitRepositoryName>
    <license.title>SonarTS</license.title>

    <assertj.version>3.11.1</assertj.version>
    <junit.version>4.12</junit.version>
    <logback.version>1.0.13</logback.version>
    <slf4j.version>1.7.21</slf4j.version>
    <sonar.version>7.9</sonar.version>
    <sonar.min.version>7.9</sonar.min.version>
    <sonar-orchestrator.version>3.26.0.2111</sonar-orchestrator.version>
    <sonarlint.version>4.3.1.2486</sonarlint.version>
    <gson.version>2.6.2</gson.version>
    <commons-io.version>2.5</commons-io.version>
    <guava.version>28.1-jre</guava.version>
    <jsr305.version>3.0.1</jsr305.version>
    <mockito.version>2.21.0</mockito.version>
    <sonar-analyzer-commons.version>1.11.0.541</sonar-analyzer-commons.version>

    <artifactsToPublish>${project.groupId}:sonar-typescript-plugin:jar</artifactsToPublish>

    <maven.compiler.release>8</maven.compiler.release>
    <!-- FIXME fix javadoc warnings and remove this -->
    <doclint>none</doclint>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Default dependencies (compile) -->
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>${jsr305.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-commons</artifactId>
        <version>${sonar-analyzer-commons.version}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-testing-harness</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.orchestrator</groupId>
        <artifactId>sonar-orchestrator</artifactId>
        <version>${sonar-orchestrator.version}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>com.oracle</groupId>
            <artifactId>ojdbc6</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>3.0.0</version>
        <scope>test</scope>
      </dependency>

      <!-- Provided dependencies -->
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-plugin-api</artifactId>
        <version>${sonar.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.javascript</groupId>
        <artifactId>sonar-javascript-plugin</artifactId>
        <type>sonar-plugin</type>
        <version>${project.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
        <scope>provided</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>1.7.5</version>
          <configuration>
            <nodeVersion>v10.15.3</nodeVersion>
            <npmVersion>6.9.0</npmVersion>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>its</id>
      <activation>
        <property>
          <name>env.SONARSOURCE_QA</name>
          <value>true</value>
        </property>
      </activation>
      <modules>
        <module>its</module>
      </modules>
    </profile>
  </profiles>

</project>
